Feature: Added Skill Matrix UI integration for transfer pending action

--- a/setup-config/content/employee/transferModules/transferFunctionality.html
+++ b/setup-config/content/employee/transferModules/transferFunctionality.html
@@ -34,6 +34,7 @@
                                     <div ng-include="'content/employee/transferModules/pms.html'" ng-if="menu.id == transferFunDet.selectedMenu.id && menu.id == 8"></div>
                                     <div ng-include="'content/employee/transferModules/concern.html'" ng-if="menu.id == transferFunDet.selectedMenu.id && menu.id == 9"></div>
                                     <div ng-include="'content/employee/transferModules/survey.html'" ng-if="menu.id == transferFunDet.selectedMenu.id && menu.id == 10"></div>
+                                    <div ng-include="'content/employee/transferModules/skillMatrix.html'" ng-if="menu.id == transferFunDet.selectedMenu.id && menu.id == 11"></div>
                                 </div>
                                 <div class="modal-footer pr" style="padding: 15px;">
                                     <div class="row">
