Fix: Standardize user type casing in employee controller and skill matrix template

--- a/setup-config/content/employee/transferModules/skillMatrix.html
+++ b/setup-config/content/employee/transferModules/skillMatrix.html
@@ -2,9 +2,9 @@
     <!-- Add tabs section -->
     <div class="skill-matrix-tabs">
         <ul class="nav nav-tabs">
-          <li ng-class="{'active': selectedUserType === 'Trainer'}" ng-click="filterByUserType('Trainer')">
+          <li ng-class="{'active': selectedUserType === 'TRAINER'}" ng-click="filterByUserType('TRAINER')">
             <a href="javascript:void(0)">
-              Trainer<span> ({{getUserTypeCount('Trainer')}})</span>
+              TRAINER<span> ({{getUserTypeCount('TRAINER')}})</span>
             </a>
           </li>
           <li ng-class="{'active': selectedUserType === 'QA'}" ng-click="filterByUserType('QA')">
