Fix: Stage 2 fixes till date 17 June

--- a/setup-config/content/employee/transferModules/skillMatrix.html
+++ b/setup-config/content/employee/transferModules/skillMatrix.html
@@ -2,9 +2,9 @@
     <!-- Add tabs section -->
     <div class="skill-matrix-tabs">
         <ul class="nav nav-tabs">
-          <li ng-class="{'active': selectedUserType === 'TRAINER'}" ng-click="filterByUserType('TRAINER')">
+          <li ng-class="{'active': selectedUserType === 'Trainer'}" ng-click="filterByUserType('Trainer')">
             <a href="javascript:void(0)">
-              TRAINER<span> ({{getUserTypeCount('TRAINER')}})</span>
+              TRAINER<span> ({{getUserTypeCount('Trainer')}})</span>
             </a>
           </li>
           <li ng-class="{'active': selectedUserType === 'QA'}" ng-click="filterByUserType('QA')">
@@ -28,7 +28,7 @@
     <div class="table-responsive" ng-if="!listAPILoading" ng-if="transferFuncationalityMenu[10].skillmatrixPendingList != null && transferFuncationalityMenu[10].skillmatrixPendingList.length > 0">
         <table class="table table-striped table-hover tableBodyScroll">
             <thead>
-                <tr>
+<tr>
                     <th class="srClass" ng-click="transferFunDet.selectedMenu.checkAllData = (transferFunDet.selectedMenu.checkAllData) ? false : true;checkUncheckAll()">
                         <i class="fa" aria-hidden="true" ng-class="transferFunDet.selectedMenu.checkAllData ? 'fa-check-square-o' :'fa-square-o'"></i>
                     </th>
@@ -37,13 +37,15 @@
                     <th scope="col">Department</th>
                     <th scope="col">Cell/Line</th>
                     <th scope="col">Workstation</th>
+                    <th scope="col">Level</th>
+                    <th scope="col">Activity</th>
                     <th scope="col" class="actionClass">
                         <ui-select ng-model="transferFunDet.selectedMenu.allDataEmp" theme="selectize" class="customUISelect" style="position: relative;width: 100%;" on-select="onAllEmpSelected($item)">
                             <ui-select-match placeholder="Select or search a Employee...">
                                 <span class="selectedName">{{$select.selected.empName}}</span>
                                 <button type="button" class="clear" ng-click="$event.stopPropagation();transferFunDet.selectedMenu.allDataEmp=undefined;" style="position: absolute;right: 2em;top: 5px;">X</button>
                             </ui-select-match>
-                            <ui-select-choices group-by="'branchName'" repeat="item in empList | filter: $select.search">
+                            <ui-select-choices group-by="'branchName'" repeat="item in skillMatrixEmpList | filter: {userType: selectedUserType} | filter: $select.search">
                                 <span ng-bind-html="item.empName |highlight: $select.search"></span>
                             </ui-select-choices>
                             <ui-select-no-choice ng-style="!$select.open && {'display':'none'}">
@@ -58,11 +60,13 @@
                     <td class="srClass" ng-click="x.isChecked = (x.isChecked) ? false : true;checkUncheck();x.empData = (!x.isChecked) ? undefined : x.empData;">
                         <i class="fa " aria-hidden="true" ng-class="(x.isChecked) ? 'fa-check-square-o' : 'fa-square-o'"></i>
                     </td>
-                    <td>{{x.empId || ''}}</td>
+                    <td>{{x.cmpy_emp_id || '-'}}</td>
                     <td>{{x.empName || ''}}</td>
                     <td>{{x.department || ''}}</td>
                     <td>{{x.cell || ''}}</td>
                     <td>{{x.workstation || ''}}</td>
+                    <td>{{x.level || ''}}</td>
+                    <td>{{x.activity || ''}}</td>
                     <td class="actionClass">
                         <ui-select ng-model="x.empData" theme="selectize" class="customUISelect" style="position: relative;width: 100%;" ng-disabled="transferFunDet.selectedMenu.allDataEmp && transferFunDet.selectedMenu.allDataEmp != undefined" on-select="onSingleEmpSelected($item)">
                             <ui-select-match placeholder="Select or search a Employee...">
